--- a/module/scripts/dialogs/extend-data-preview-dialog.html
+++ b/module/scripts/dialogs/extend-data-preview-dialog.html
@@ -1,4 +1,4 @@
-<div class="dialog-frame extend-data-preview-dialog" style="width: 800px;">
+<div class="dialog-frame extend-data-preview-dialog" style="width: 900px;">
 	<div class="dialog-header" bind="dialogHeader"></div>
 	<div class="dialog-body" bind="dialogBody">
 		<div class="grid-layout layout-normal layout-full grid-layout-for-ui">
@@ -13,26 +13,29 @@
 				</div>
 				<div class="recon-dialog-service-panel-container" bind="servicePanelContainer">
 					<div class="recon-dialog-service-panel-message" bind="servicePanelMessage"></div>
+					<div class="recon-dialog-service-panel recon-dialog-mql-service-panel" bind="servicePanel">
+						<div class="grid-layout layout-normal layout-full grid-layout-for-ui">
+							<table>
+								<tr>
+									<td width="300" height="1" ><span bind="fb_add_property"></span></td>
+									<td height="1">Preview</td>
+									<td height="1" width="1%"><button class="button" bind="resetButton"></button></td>
+								</tr>
+								<tr>
+									<td style="vertical-align: top;" height="1"><div class="input-container"><input bind="addPropertyInput" /></div></td>
+									<td style="vertical-align: top;" rowspan="3" colspan="2"><div class="preview-container" bind="previewContainer"></div></td>
+								</tr>
+								<tr>
+									<td height="1" bind="suggested_properties"></td>
+								</tr>
+								<tr>
+									<td><div class="suggested-property-container" bind="suggestedPropertyContainer"></div></td>
+								</tr>
+							</table>
+						</div>
+					</div>
 				</div>
 			</div>
-
-			<table rows="4">
-				<tr>
-					<td width="300" height="1" ><span bind="fb_add_property"></span></td>
-					<td height="1">Preview</td>
-					<td height="1" width="1%"><button class="button" bind="resetButton"></button></td>
-				</tr>
-				<tr>
-					<td style="vertical-align: top;" height="1"><div class="input-container"><input bind="addPropertyInput" /></div></td>
-					<td style="vertical-align: top;" rowspan="3" colspan="2"><div class="preview-container" bind="previewContainer"></div></td>
-				</tr>
-				<tr>
-					<td height="1" bind="suggested_properties"></td>
-				</tr>
-				<tr>
-					<td><div class="suggested-property-container" bind="suggestedPropertyContainer"></div></td>
-				</tr>
-			</table>
 		</div>
 	</div>
 	<div class="dialog-footer" bind="dialogFooter">
