Hid "Add Property" elements.

--- a/module/scripts/dialogs/extend-data-preview-dialog.html
+++ b/module/scripts/dialogs/extend-data-preview-dialog.html
@@ -17,19 +17,15 @@
 						<div class="grid-layout layout-normal layout-full grid-layout-for-ui">
 							<table>
 								<tr>
-									<td width="300" height="1" ><span bind="fb_add_property"></span></td>
+									<!--td width="300" height="1" ><span bind="fb_add_property"></span></td-->
+									<td width="300" height="1" bind="suggested_properties"></td>
 									<td height="1">Preview</td>
 									<td height="1" width="1%"><button class="button" bind="resetButton"></button></td>
 								</tr>
 								<tr>
-									<td style="vertical-align: top;" height="1"><div class="input-container"><input bind="addPropertyInput" /></div></td>
-									<td style="vertical-align: top;" rowspan="3" colspan="2"><div class="preview-container" bind="previewContainer"></div></td>
-								</tr>
-								<tr>
-									<td height="1" bind="suggested_properties"></td>
-								</tr>
-								<tr>
+									<!--td style="vertical-align: top;" height="1"><div class="input-container"><input bind="addPropertyInput" /></div></td-->
 									<td><div class="suggested-property-container" bind="suggestedPropertyContainer"></div></td>
+									<td style="vertical-align: top;" rowspan="1" colspan="2"><div class="preview-container" bind="previewContainer"></div></td>
 								</tr>
 							</table>
 						</div>
